.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trevas-lab-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trevas-lab-ui
  template:
    metadata:
      labels:
        app: trevas-lab-ui
    spec:
      containers:
        - name: trevas-lab-ui
          image: inseefrlab/trevas-lab-ui:0.6.0
          imagePullPolicy: IfNotPresent
