.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trevas-lab-ui
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: trevas-lab-ui
