.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trevas-lab-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - trevas.example.com
  rules:
    - host: trevas.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trevas-lab-ui
                port:
                  number: 80
